[project]
name = "claude-wt"
dynamic = ["version"]
description = "Claude worktree management CLI - automate launching Claude in dedicated git worktrees"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["typer>=0.16.0", "rich>=13.0.0"]
keywords = ["claude", "git", "ai"]
authors = [{ name = "Claude", email = "noreply@anthropic.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[project.scripts]
claude-wt = "main:app"

[project.urls]
Homepage = "https://github.com/jlowin/claude-wt"
Issues = "https://github.com/jlowin/claude-wt/issues"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
package = true
